<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScanLibrary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scanning">Scanning</string>
    <string name="done">Save</string>
    <string name="scan">Next</string>
    <string name="cantCrop">Can not crop the image, change the points</string>
    <string name="ok">OK</string>
    <string name="loading">Loading</string>
    <string name="applying_filter">Applying filter</string>
    <string name="low_memory">Low Memory</string>
    <string name="low_memory_message">Your phone is low on memory, you may feel some lags while editing images.</string>
    <string name="file_name">File Name</string>
    <string name="save_as_image">Save As Image</string>
    <string name="save_as_pdf">Save As Pdf</string>
    <string name="for_better_results_use_brightness_or_contrast">For better results increase brightness or contrast.</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="monochrome">MonoChrome</string>
    <string name="rotate">Rotate</string>
    <string name="b_and_w">B and W</string>
    <string name="gray_mode">Gray Mode</string>
    <string name="perfect">Perfect</string>
    <string name="magic_color">Magic Color</string>
    <string name="original">Original</string>
    <string name="image">IMAGE</string>
    <string name="save">Save</string>
</resources>
