<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBack"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/original"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_original"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/original"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/magicColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_magic"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:text="@string/magic_color"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/gammaEffect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_gamma"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:text="@string/perfect"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/grayMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_grey"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:text="@string/gray_mode"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/BWMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_black_white"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:text="@string/b_and_w"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/topBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/topBar"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rotate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_rotate_left"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/rotate"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/monochrome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_monochrome"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:text="@string/monochrome"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/brightnessButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_brightness"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:text="@string/brightness"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/contrastButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_contrast"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:text="@string/contrast"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_save_button"
        android:drawableStart="@drawable/ic_select"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_back"
        android:orientation="horizontal"
        android:padding="@dimen/bottom_bar_padding" />

    <TextView
        android:id="@+id/tv_hint_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:text="@string/for_better_results_use_brightness_or_contrast"
        android:textColor="@color/blue"
        android:visibility="gone" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/topBar2"
        android:layout_below="@id/doneButton"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/scannedImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/image" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/brightnessPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/topBar2"
        android:layout_margin="10dp"
        android:background="@drawable/shape_filter_back"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/brightness"
            android:textColor="@color/colorWhite" />

        <SeekBar
            android:id="@+id/seek_brightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:progressBackgroundTint="@color/colorOff"
            android:progressTint="@color/colorPurple"
            android:thumb="@drawable/shape_circle_thumb"
            android:thumbTint="@color/colorPurple" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contrastPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/topBar2"
        android:layout_margin="10dp"
        android:background="@drawable/shape_filter_back"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/contrast"
            android:textColor="@color/colorWhite" />

        <SeekBar
            android:id="@+id/seek_sharpness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:max="5"
            android:progressBackgroundTint="@color/colorOff"
            android:progressTint="@color/colorPurple"
            android:thumb="@drawable/shape_circle_thumb"
            android:thumbTint="@color/colorPurple" />

    </LinearLayout>

</RelativeLayout>